[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nb_hideinputs"
authors = [{name = "Connor Ferster", email = "connor@structuralpython.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "nbconvert >= 7.0.0"
]

[project.urls]
Home = "https://github.com/connorferster/nb_hideinputs"
