[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nb_hideinputs"
authors = [{name = "Connor Ferster", email = "connor@structuralpython.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
readme = "README.md"
dependencies = [
    "nbconvert >= 7.0.0"
]

[project.optional-dependencies]
test = [
    "pytest"
]

[project.urls]
Home = "https://github.com/connorferster/nb_hideinputs"


[project.entry-points."nbconvert.exporters"]
HTML_NoInput = 'nb_hideinputs:HTMLHideInputExporter'
PDF_NoInput = 'nb_hideinputs:PDFHideInputExporter'
LaTeX_NoInput = 'nb_hideinputs:LatexHideInputExporter'